--- a/ventas/templates/actas/create_acta.html
+++ b/ventas/templates/actas/create_acta.html
@@ -215,9 +215,11 @@
                 <div class="checkbox-column">
                     <label class="checkbox-label">{{ form.instalacion }} Instalación</label>
                     <label class="checkbox-label">{{ form.post_venta }} Post Venta</label>
-                    <label class="checkbox-label">{{ form.mantenimiento_atencionReclamo_Calidad }} Mantenimiento/Atención Reclamo/Calidad</label>
+                    <label class="checkbox-label">{{ form.cambio_de_plan }} Cambio de Plan</label>
+                    <label class="checkbox-label">{{ form.traslado_externo }} Traslado Externo</label>
+                    <label class="checkbox-label">{{ form.traslado_interno }} Traslado Interno</label>
+                    <label class="checkbox-label">{{ form.traslado_acometida }} Traslado Acometida</label>
                     <label class="checkbox-label">{{ form.retiro }} Retiro</label>
-                    <label class="checkbox-label">{{ form.retiro_acometida }} Retiro Acometida</label>
                 </div>
             </div>
         </fieldset>
